--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/milligram.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <title>User</title>
 </head>
 
@@ -17,64 +18,40 @@
         <div class="container mt-5">
             <div class="row">
                 <!-- Button trigger modal -->
-                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="w-25">
-                    Create User
-                </button>
+                <button type="button" class="w-25" onclick="modalOpen()">Create User</button>
 
                 <!-- Modal -->
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog mt-5 modal-lg">
-                        <div class="modal-content p-4">
-                            <div class="modal-header border-0">
-                                <h1 class="modal-title fs-3" id="exampleModalLabel">Create user</h1>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <div class="row">
-                                    <div class="col-md-4">
-                                        <input type="text" name="" id="name" placeholder="Name" class="form-control">
-                                    </div>
+                <div id="modal">
+                    <div class="card shadow-lg border-0">
 
-                                    <div class="col-md-4">
-                                        <input type="text" name="" id="userName" placeholder="@ User name"
-                                            class="form-control">
-                                    </div>
-
-                                    <div class="col-md-4">
-                                        <input type="email" name="" id="userEmail" placeholder="Email"
-                                            class="form-control">
-                                    </div>
-
-                                    <div class="col-md-4">
-                                        <input type="text" name="" id="userAddress" placeholder="Address"
-                                            class="form-control">
-                                    </div>
-
-                                    <div class="col-md-4">
-                                        <input type="tel" name="" id="userPhone" placeholder="Phone"
-                                            class="form-control">
-                                    </div>
-
-                                    <div class="col-md-4">
-                                        <input type="text" name="" id="userWebsite" placeholder="Website"
-                                            class="form-control">
-                                    </div>
-
-                                    <div class="col-md-4">
-                                        <input type="text" name="" id="userCompany" placeholder="Company"
-                                            class="form-control">
-                                    </div>
-
-                                </div>
-                            </div>
-                            <div class="modal-footer border-0">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary" onclick="createUser()">Save
-                                    changes</button>
-                            </div>
+                        <div class="d-flex justify-content-between align-items-center mb-2">
+                            <h1>Create User </h1>
+                            <i onclick="closeModal()" class="fa-solid fa-xmark fa-2x"></i>
                         </div>
+
+                        <form action="" id="form-body">
+
+                            <input type="text" name="" id="name" placeholder="Name" class="form-control" required>
+
+                            <input type="text" name="" id="userName" placeholder="@ User name" class="form-control" required>
+
+                            <input type="email" name="" id="userEmail" placeholder="Email" class="form-control" required>
+
+                            <input type="text" name="" id="userAddress" placeholder="Address" class="form-control" required>
+
+                            <input type="tel" name="" id="userPhone" placeholder="Phone" class="form-control" required>
+
+                            <input type="text" name="" id="userWebsite" placeholder="Website" class="form-control" required>
+
+                            <input type="text" name="" id="userCompany" placeholder="Company" class="form-control" required>
+
+                        </form>
+
+                        <div class="modal_footer d-flex justify-content-end gap-3 mb-3">
+                            <button type="button" class="btn btn-secondary" onclick="closeModal()">Close</button>
+                            <button type="button" class="btn btn-primary" onclick="createUser()">Save changes</button>
+                        </div>
+
                     </div>
                 </div>
                 <hr class="mt-3">
@@ -114,8 +91,8 @@
 
 
 
-    <script src="./js/axios.js"></script>
-    <script src="./js//script.js"></script>
+
+    <script src="./js/script.js"></script>
     <script src="./js/bootstrap.bundle.js"></script>
 
 </body>
