--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="./css/responsive.css">
-    <title>User</title>
+    <title>user management</title>
 </head>
 
 <body>
